docs: fix dark mode ReadTheDocs link preview addon tooltips

--- a/docs/_static/dark-mode.css
+++ b/docs/_static/dark-mode.css
@@ -21,3 +21,8 @@ svg,
 object[type^="image/"] {
 	filter: var(--img-filter);
 }
+
+/* For ReadTheDocs Link Preview addon tooltips */
+.tooltip .tooltip-content {
+	background: var(--color-background-primary);
+}
